feat: details page feature added, view details ok, test failed to draw diagram
