# src/assets/swagger/onecx-ai-ui-bff.yaml
@@ -26,6 +26,42 @@ paths:
           description: Bad request
         '500':
           description: Something went wrong
+  /aIKnowledgeDocument/{id}:
+    get:
+      x-onecx:
+        permissions:
+          aIKnowledgeDocument:
+            - read
+      operationId: getAIKnowledgeDocumentById
+      tags:
+        - AIKnowledgeDocumentBffService
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAIKnowledgeDocumentByIdResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   schemas:
     AIKnowledgeDocument:
@@ -38,11 +74,15 @@ components:
           type: integer
           format: int32
         id:
-          type: integer
-          format: int32
+          type: string
         name:
           type: string
-        # "ACTION S1: add additional properties here"
+        status:
+          type: string
+          enum:
+           - NEW
+           - PROCESSING
+           - EMBEDDED
     AIKnowledgeDocumentSearchRequest:
       type: object
       properties:
@@ -54,7 +94,11 @@ components:
           format: int32
         name:
           type: string
-        # " ACTION S1: Add additional properties to the <feature>-bff.yaml"
+        status:
+          enum:
+           - NEW
+           - PROCESSING
+           - EMBEDDED
     AIKnowledgeDocumentSearchResponse:
       type: object
       required:
@@ -69,3 +113,39 @@ components:
           type: integer
           format: int32
           description: Total number of results on the server.
+    ProblemDetailResponse:
+      type: object
+      properties:
+        errorCode:
+          type: string
+        detail:
+          type: string
+        params:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProblemDetailParam'
+        invalidParams:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProblemDetailInvalidParam'
+    ProblemDetailParam:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+    ProblemDetailInvalidParam:
+      type: object
+      properties:
+        name:
+          type: string
+        message:
+          type: string
+    GetAIKnowledgeDocumentByIdResponse:
+      type: object
+      required:
+        - result
+      properties:
+        result:
+          $ref: '#/components/schemas/AIKnowledgeDocument'
